abilitato link programma reformat e fix errori di validazione

--- a/index.html
+++ b/index.html
@@ -17,10 +17,16 @@
     <meta name="author" content="" />
     <!-- raoul -->
     <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:image" content="https://www.agileday.it/venture/2019/firenze/img/agile-venture-firenze-twitter.png" />
+    <meta
+      name="twitter:image"
+      content="https://www.agileday.it/venture/2019/firenze/img/agile-venture-firenze-twitter.png"
+    />
     <meta name="twitter:title" content="Agile Venture Firenze2019" />
 
-    <meta property="og:image" content="https://www.agileday.it/venture/2019/firenze/img/agile-venture-firenze-social.png" />
+    <meta
+      property="og:image"
+      content="https://www.agileday.it/venture/2019/firenze/img/agile-venture-firenze-social.png"
+    />
     <meta property="og:title" content="Agile Venture Firenze2019" />
     <meta property="og:description" content="Evolution over Revolution" />
 
@@ -51,7 +57,7 @@
     <link href="css/miniiad.css" rel="stylesheet" />
   </head>
   <body id="page-top" data-spy="scroll" data-target=".navbar-custom">
-    <nav class="navbar navbar-custom navbar-fixed-top" role="navigation">
+    <nav class="navbar navbar-custom navbar-fixed-top">
       <div class="container">
         <div class="navbar-header page-scroll">
           <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-main-collapse">
@@ -70,7 +76,7 @@
               <a href="#page-top"></a>
             </li>
             <li class="page-scroll">
-                <a href="#keynote">Keynote</a>
+              <a href="#keynote">Keynote</a>
             </li>
             <li class="page-scroll">
               <a href="#programma">Programma</a>
@@ -82,14 +88,13 @@
                             <a href="#press">Press</a>
                         </li>
                         -->
-              <!--          <li class="page-scroll">
-                            <a href="#iscrizione">Iscrizione</a>
-                        </li>
-           
-              <li class="page-scroll">
-              <a href="#c4s">C4Sessions</a>
+            <li class="page-scroll">
+              <a href="#iscrizione">Iscrizione</a>
             </li>
-          -->
+
+            <!-- <li class="page-scroll">
+              <a href="#c4s">C4Sessions</a>
+            </li> -->
             <li class="page-scroll">
               <a href="#location">Location</a>
             </li>
@@ -109,13 +114,20 @@
             <div class="col-md-8 col-md-offset-2">
               <div class="brand-frame">
                 <h1 class="brand-heading">
-                  <img class="resp" id="headerimg" src="img/agile-venture-firenze-white.png" alt="Agile Venture Firenze" />
+                  <img
+                    class="resp"
+                    id="headerimg"
+                    src="img/agile-venture-firenze-white.png"
+                    alt="Agile Venture Firenze"
+                  />
                   Evolution over Revolution
                 </h1>
                 <p class="intro-text">Firenze, sabato 28 settembre 2019</p>
               </div>
               <div class="page-scroll">
-                  <a href="#keynote" class="btn btn-circle btn-circle-white"> <i class="fa fa-angle-double-down animated"></i> </a>
+                <a href="#keynote" class="btn btn-circle btn-circle-white">
+                  <i class="fa fa-angle-double-down animated"></i>
+                </a>
               </div>
             </div>
           </div>
@@ -130,7 +142,8 @@
       </p>
       <p>
         Di fronte a questo cambiamento, è importante focalizzare l’attenzione sui
-        <b>principi</b> e sulle <b>pratiche</b> che permettono di rispondere ai cambiamenti e generare valore.
+        <strong>principi</strong> e sulle <strong>pratiche</strong> che permettono di rispondere ai cambiamenti e
+        generare valore.
       </p>
       <p>
         Una giornata per raccontare cosa può migliorare il lavoro dei team e condividere idee e valori.
@@ -138,43 +151,81 @@
     </section>
 
     <section id="keynote" class="content-section text-center">
-            <div class="container">
-                <div class="row">
-                    <div class="col-lg-8 col-lg-offset-2">
-                        <h2>Keynote</h2>
-                        <h3 class="keynote__title">Finding Your Agility</h3>
-                        <div>
-                            <p>Perché veramente le aziende e le persone si avvicinano all’Agile? Cosa davvero si aspettano di trovare, quali problemi realmente stanno cercando di risolvere?</p>
-                            <p>Queste sono domande importanti. Anzi: fondamentali nel vero senso della parola.</p>
-                            <p>Perché senza questa chiarezza come fondamento, il rischio di “risolvere il problema sbagliato”, con tutti i danni che ne possono conseguire, è davvero molto alto. </p>
-                            <p>Inoltre, cosa vuole dire “applicare Agile”? È solo una questione di metodo e pratiche, o c’è ben altro? Qualcosa di meno visibile ma essenziale per ottenere un vero beneficio?</p>
-                            <p>Per finire, davvero ci sono soluzioni “prêt-à-porter” oppure l’agilità, seppure basata su princìpi comuni, è qualcosa di totalmente soggettivo? Se lo è, come possiamo trovare la nostra propria agilità?</p>
-                        </div>
-                        <div class="keynote__bio">
-                            <div class="speaker">
-                              <a href="http://andreaprovaglio.com/" target="_blank">
-                                <img src="img/andrea_provaglio.jpg" alt="Andrea Provaglio" class="speaker__img">
-                              </a>
-                              <div class="speaker__name">
-                                <a href="http://andreaprovaglio.com/" target="_blank">Andrea Provaglio</a>
-                              </div>
-                            </div>
-                            <p class="speaker__description">
-                                <p>Affianco aziende ed organizzazioni il cui business si basa sul lavoro intellettuale e sull’innovazione (comprese aziende IT) e le assisto nel ripensare le proprie dinamiche organizzative, la loro struttura e mentalità, le loro pratiche e processi, per permettergli di fare business in modo più efficace nel 21mo secolo.</p>
-                                <p>Lavoro a stretto contatto con proprietari, amministratori, manager e team operativi e svolgo una serie di diverse attività che possono comprendere coaching individuale e di team, consulenza su specifiche pratiche e affiancamento “on the job".</p>
-                                <p>Mi interessano particolarmente i temi della leadership distribuita e dell’auto-organizzazione in aziende basate sulla conoscenza, un tema che tocca tutta vari aspetti tra cui: strutture organizzative non convenzionali, capacità di comunicazione individuale e collettiva, capacità di apprendimento e miglioramento continuo e “social skill”.</p>
-                                <p>Da 12 anni mi occupo di Agile (metodo) e di agilità (mindset) con clienti sia in Italia che all’estero. In oltre 25 anni di esperienza professionale, prima nel settore IT poi nell’Agile in senso più ampio, ho collaborato, in tre diversi continenti, con organizzazioni che vanno dalla FAO (Nazioni Unite) fino ad aziende o start-up piccole e dinamiche. Ho una vasta gamma di esperienza, sia nel settore privato che pubblico e con culture diverse.</p>
-                                <p>Risiedo e opero in Italia ed estero. Ho lavorato per quattro anni negli Stati Uniti con un visto di tipo O-1 per “abilità straordinarie nelle scienze”.</p>
-                                <p>Come parte delle mie regolari attività, mi piace condividere le mie esperienze partecipando come speaker alle principali conferenze internazionali del settore.</p>
-                            </p>
-                        </div>
-                    </div>
-                </div>
-                <div class="page-scroll" style="margin-top: 50px">
-                    <a href="#programma" class="btn btn-circle"> <i class="fa fa-angle-double-down animated"></i> </a>
-                </div>
+      <div class="container">
+        <div class="row">
+          <div class="col-lg-8 col-lg-offset-2">
+            <h2>Keynote</h2>
+            <h3 class="keynote-title">Finding Your Agility</h3>
+            <div>
+              <p>
+                Perché veramente le aziende e le persone si avvicinano all’Agile? Cosa davvero si aspettano di trovare,
+                quali problemi realmente stanno cercando di risolvere?
+              </p>
+              <p>Queste sono domande importanti. Anzi: fondamentali nel vero senso della parola.</p>
+              <p>
+                Perché senza questa chiarezza come fondamento, il rischio di “risolvere il problema sbagliato”, con
+                tutti i danni che ne possono conseguire, è davvero molto alto.
+              </p>
+              <p>
+                Inoltre, cosa vuole dire “applicare Agile”? È solo una questione di metodo e pratiche, o c’è ben altro?
+                Qualcosa di meno visibile ma essenziale per ottenere un vero beneficio?
+              </p>
+              <p>
+                Per finire, davvero ci sono soluzioni “prêt-à-porter” oppure l’agilità, seppure basata su princìpi
+                comuni, è qualcosa di totalmente soggettivo? Se lo è, come possiamo trovare la nostra propria agilità?
+              </p>
             </div>
-        </section>
+            <div class="keynote-bio">
+              <div class="speaker">
+                <a href="http://andreaprovaglio.com/" target="_blank" rel="noopener">
+                  <img src="img/andrea_provaglio.jpg" alt="Andrea Provaglio" class="speaker-img" />
+                </a>
+                <div class="speaker-name">
+                  <a href="http://andreaprovaglio.com/" target="_blank" rel="noopener">Andrea Provaglio</a>
+                </div>
+              </div>
+              <div class="speaker-description">
+                <p>
+                  Affianco aziende ed organizzazioni il cui business si basa sul lavoro intellettuale e sull’innovazione
+                  (comprese aziende IT) e le assisto nel ripensare le proprie dinamiche organizzative, la loro struttura
+                  e mentalità, le loro pratiche e processi, per permettergli di fare business in modo più efficace nel
+                  21mo secolo.
+                </p>
+                <p>
+                  Lavoro a stretto contatto con proprietari, amministratori, manager e team operativi e svolgo una serie
+                  di diverse attività che possono comprendere coaching individuale e di team, consulenza su specifiche
+                  pratiche e affiancamento “on the job".
+                </p>
+                <p>
+                  Mi interessano particolarmente i temi della leadership distribuita e dell’auto-organizzazione in
+                  aziende basate sulla conoscenza, un tema che tocca tutta vari aspetti tra cui: strutture organizzative
+                  non convenzionali, capacità di comunicazione individuale e collettiva, capacità di apprendimento e
+                  miglioramento continuo e “social skill”.
+                </p>
+                <p>
+                  Da 12 anni mi occupo di Agile (metodo) e di agilità (mindset) con clienti sia in Italia che
+                  all’estero. In oltre 25 anni di esperienza professionale, prima nel settore IT poi nell’Agile in senso
+                  più ampio, ho collaborato, in tre diversi continenti, con organizzazioni che vanno dalla FAO (Nazioni
+                  Unite) fino ad aziende o start-up piccole e dinamiche. Ho una vasta gamma di esperienza, sia nel
+                  settore privato che pubblico e con culture diverse.
+                </p>
+                <p>
+                  Risiedo e opero in Italia ed estero. Ho lavorato per quattro anni negli Stati Uniti con un visto di
+                  tipo O-1 per “abilità straordinarie nelle scienze”.
+                </p>
+                <p>
+                  Come parte delle mie regolari attività, mi piace condividere le mie esperienze partecipando come
+                  speaker alle principali conferenze internazionali del settore.
+                </p>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="page-scroll" style="margin-top: 50px">
+          <a href="#programma" class="btn btn-circle"> <i class="fa fa-angle-double-down animated"></i> </a>
+        </div>
+      </div>
+    </section>
 
     <section id="programma" class="content-section text-center">
       <div class="container">
@@ -182,11 +233,12 @@
           <div class="col-lg-12  prog">
             <h2>Programma</h2>
             <script type="text/javascript" src="https://sessionize.com/api/v2/k7cwgenh/view/gridsmart"></script>
-                    </div>
-        <div class="page-scroll" style="margin-top: 50px">
-          <a href="#sponsor" class="btn btn-circle">
-            <i class="fa fa-angle-double-down animated"></i>
-          </a>
+          </div>
+          <div class="page-scroll" style="margin-top: 50px">
+            <a href="#sponsor" class="btn btn-circle">
+              <i class="fa fa-angle-double-down animated"></i>
+            </a>
+          </div>
         </div>
       </div>
     </section>
@@ -221,25 +273,33 @@
                 </div>
                 <div class="sponsor-div">
                   <p>
-                    <a href="https://www.vodafone.it/" target="_blank">
+                    <a href="https://www.vodafone.it/" target="_blank" rel="noopener">
                       <img src="img/logo_vodafone.png" alt="Vodafone" />
                     </a>
                   </p>
                 </div>
                 <div class="sponsor-div">
                   <p>
-                    <a href="https://www.xpeppers.com/" target="_blank">
+                    <a href="https://www.xpeppers.com/" target="_blank" rel="noopener">
                       <img src="img/logo_xpeppers.png" alt="XPeppers" />
                     </a>
                   </p>
                 </div>
                 <div class="sponsor-div">
-                    <p><a href="http://www.aep-italia.it/" target="_blank"><img src="img/logo_aep.png" alt="AEP Ticketing Solutions" /></a></p>
+                  <p>
+                    <a href="http://www.aep-italia.it/" target="_blank" rel="noopener">
+                      <img src="img/logo_aep.png" alt="AEP Ticketing Solutions" />
+                    </a>
+                  </p>
                 </div>
                 <div class="sponsor-div">
-                  <p><a href="http://doubleloop.io/" target="_blank"><img src="img/doubleloop-logo.png" alt="doubleloop" /></a></p>
-              </div>
-              <!--                <div class="sponsor-div">
+                  <p>
+                    <a href="http://doubleloop.io/" target="_blank" rel="noopener">
+                      <img src="img/doubleloop-logo.png" alt="doubleloop" />
+                    </a>
+                  </p>
+                </div>
+                <!--                <div class="sponsor-div">
                                     <p><a href="https://www.softecspa.com/it/" target="_blank"><img src="img/logo_softec.png" alt="Softec S.p.A." /></a></p>
                                 </div>
                                 <div class="sponsor-div">
@@ -275,18 +335,34 @@
               <h3 class="partner-title">Media Partner</h3>
               <div class="partner-line">
                 <div class="partner-div">
-                  <p><a href="http://www.agilemovement.it/" target="_blank"><img src="img/IAM_logo.png" alt="Italian Agile Movement" /></a></p>
+                  <p>
+                    <a href="http://www.agilemovement.it/" target="_blank" rel="noopener">
+                      <img src="img/IAM_logo.png" alt="Italian Agile Movement" />
+                    </a>
+                  </p>
                 </div>
                 <div class="partner-div">
-                    <p><a href="https://www.docebo.com/" target="_blank"><img src="img/logo_docebo.jpg" alt="Docebo" /></a></p>
+                  <p>
+                    <a href="https://www.docebo.com/" target="_blank" rel="noopener">
+                      <img src="img/logo_docebo.jpg" alt="Docebo" />
+                    </a>
+                  </p>
                 </div>
                 <div class="partner-div">
-                    <p><a href="https://swicket.io/" target="_blank"><img src="img/logo_swicket.jpg" alt="Swicket" /></a></p>
+                  <p>
+                    <a href="https://swicket.io/" target="_blank" rel="noopener">
+                      <img src="img/logo_swicket.jpg" alt="Swicket" />
+                    </a>
+                  </p>
                 </div>
               </div>
               <div class="partner-line">
                 <div class="partner-div">
-                  <p><a href="https://www.officinaagile.it/" target="_blank"><img src="img/logo_officina_agile.png" alt="Officina Agile" /></a></p>
+                  <p>
+                    <a href="https://www.officinaagile.it/" target="_blank" rel="noopener">
+                      <img src="img/logo_officina_agile.png" alt="Officina Agile" />
+                    </a>
+                  </p>
                 </div>
                 <!-- <div class="partner-div">
                   <p><a href="http://www.mokabyte.it/" target="_blank"><img src="img/logo_mokabyte.png" alt="MokaByte" /></a></p>
@@ -303,20 +379,24 @@
       </div>
     </section>
 
-   <!--  <section id="iscrizione" class="content-section text-center">
-          <div class="container">
-            <div class="row">
-                <div class="col-lg-8 col-lg-offset-2">
-                  <h2>Iscrizione<br/></h2>
-                  <p><a href="https://tickets.agilemovement.it/event/avf2019/" class="btn btn-default btn-lg">Prenota il tuo biglietto</a></p>
-                </div>
-            </div>
-            </div>
-            <div class="page-scroll">
-                <a href="#location" class="btn btn-circle"> <i class="fa fa-angle-double-down animated"></i> </a>
-            </div>
-        </section> 
--->
+    <section id="iscrizione" class="content-section text-center">
+      <div class="container">
+        <div class="row">
+          <div class="col-lg-8 col-lg-offset-2">
+            <h2>Iscrizione<br /></h2>
+            <p>
+              <a href="https://tickets.agilemovement.it/event/avf2019/" class="btn btn-default btn-lg">
+                Prenota il tuo biglietto
+              </a>
+            </p>
+          </div>
+        </div>
+      </div>
+      <div class="page-scroll">
+        <a href="#location" class="btn btn-circle"> <i class="fa fa-angle-double-down animated"></i> </a>
+      </div>
+    </section>
+
     <!-- <section id="c4s" class="content-section text-center">
       <div class="container">
         <div class="row">
@@ -455,7 +535,7 @@
           </a>
         </div>
         <div class="staff_member">
-          <a href="https://www.linkedin.com/in/francesca-del-re-980930a/" target="_blank">
+          <a href="https://www.linkedin.com/in/francesca-del-re-980930a/" target="_blank" rel="noopener">
             <img src="img/francesca-del-re.jpg" alt="Francesca Del Re" class="staff_member_img" />
             <br />
             Francesca Del Re
