--- a/index.html
+++ b/index.html
@@ -364,9 +364,13 @@
                     </a>
                   </p>
                 </div>
-                <!-- <div class="partner-div">
-                  <p><a href="http://www.mokabyte.it/" target="_blank"><img src="img/logo_mokabyte.png" alt="MokaByte" /></a></p>
-                </div> -->
+                <div class="partner-div">
+                  <p>
+                    <a href="http://www.mokabyte.it/" target="_blank" rel="noopener"></a>
+                      <img src="img/logo_mokabyte.png" alt="MokaByte" />
+                    </a>
+                  </p>
+                </div>
               </div>
             </div>
           </div>
