Add develer as main sponsor

--- a/index.html
+++ b/index.html
@@ -282,6 +282,10 @@
                   </a>
                 </p>
               </div>
+              <div class="sponsor-div">
+                <p><a href="https://www.develer.com/" target="_blank">
+                  <img src="img/logo_develer.png" alt="Develer" /></a></p>
+            </div>
               <!--                <div class="sponsor-div">
                                     <p><a href="https://www.softecspa.com/it/" target="_blank"><img src="img/logo_softec.png" alt="Softec S.p.A." /></a></p>
                                 </div>
